<resources>
    <string name="app_name">Trucking</string>
    <string name="botonCalcular">Calcular</string>
    <string name="textViewResultado">Ingresar valores</string>
    <string name="editTextCentral">Central</string>
    <string name="editTextForge">Forge</string>
    <string name="botonGuardar">Guardar</string>
    <string name="botonSignoMas">+</string>
    <string name="textViewHistorial">Historial</string>
    <string name="botonConteo">Conteo</string>
    <string name="imageView">Imagen de viembenida</string>
    <string name="botonPantallaBiembenida">Ir a pantalla de biembenida</string>
    <string name="date">Fecha</string>
    <string name="origin">Origen</string>
    <string name="total">Total</string>
    <string name="cargas">Cargas</string>
    <string name="pago">Pago</string>
    <string name="error">Ocurrio un error:</string>
</resources>
